--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,9 @@ authors = ["Jonas Natten <jonas@natten.it>"]
 edition = "2018"
 
 [dependencies]
-clap = "2"
+clap = "2" # Command line argument parser
+
+# Json libraries
+serde = "1.0.98"
+serde_derive = "1.0.98"
+serde_json = "1.0.40"
