--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2018"
 clap = "2" # Command line argument parser
 
 # Json libraries
-serde = "1.0.98"
+serde = { version = "1.0.98", features = ["derive"]}
 serde_derive = "1.0.98"
 serde_json = "1.0.40"
+
+dirs = "2.0.2"
