--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2018"
 
 [dependencies]
 clap = "2" # Command line argument parser
+colored = "1.9" # Terminal colors
+rayon = "1.3.0" # Parallelization
 
 # Json libraries
 serde = { version = "1.0.98", features = ["derive"]}
@@ -13,5 +15,3 @@ serde_derive = "1.0.98"
 serde_json = "1.0.40"
 
 dirs = "2.0.2"
-
-colored = "1.9"
