--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,7 @@ rayon = "1.3.0" # Parallelization
 serde = { version = "1.0.98", features = ["derive"]}
 serde_derive = "1.0.98"
 serde_json = "1.0.40"
-
 dirs = "2.0.2"
+
+[dev-dependencies]
+tempdir = "0.3.7" # Used for testing config functionality
