--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,17 @@ language: rust
 before_install:
     - rustup component add rustfmt
 script:
-    - cargo fmt -- --check
+    - cargo fmt --all -- --check
     - cargo build --verbose
     - cargo test --verbose
 rust:
     - stable
     - beta
-    - nightly
-jobs:
-    allow_failures:
-        - rust: nightly
-    fast_finish: true
+
+# Lets skip nightly while rustfmt is different for it
+#     - nightly 
+# jobs:
+#     allow_failures:
+#         - rust: nightly
+#     fast_finish: true
 cache: cargo
