--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,13 @@
 language: rust
 before_install:
     - rustup component add rustfmt
+    - rustup component add clippy
 script:
     - cargo fmt --all -- --check
+    - cargo clippy --all-targets --all-features -- -D warnings
     - cargo build --verbose
     - cargo test --verbose
 rust:
     - stable
     - beta
-
-# Lets skip nightly while rustfmt is different for it
-#     - nightly 
-# jobs:
-#     allow_failures:
-#         - rust: nightly
-#     fast_finish: true
 cache: cargo
