--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,7 @@ serde_json = "1.0.40"
 dirs = "2.0.2" # Used to determine dir for config platform agnostic
 shellexpand = "2.0.0" # Used to expand tilde as home etc...
 
+anyhow = "1.0.34" # Simpler error handling
+
 [dev-dependencies]
 tempdir = "0.3.7" # Used for testing config functionality
