--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,6 +13,7 @@ jobs:
     - name: Install rust
       uses: actions-rs/toolchain@v1
       with:
+        toolchain: stable
         override: true
         components: rustfmt, clippy
     - name: Formatting
